# copme

./: .gitignore  LICENCE  Makefile.am  configure.ac
copme/: Makefile.am  basic.c  copme.c  copme.h  next.c  xfuncs.h
copme/src/: t.c
copme/test/: .gitignore  Makefile.am  basic-multishort.c  basic-no-arg.c  hasarg.c  opt-handling.c  optarg.c
ctme/: .gitignore  ctme.c  ctme.h  test-pass.c
doc/: .gitignore  Makefile.am  doxygen.conf.in
misc/: generated-file.txt
pkg-config/: .gitignore  Makefile.am  copme.pc.in
test/: .gitignore  Makefile.am  basic-multishort.c  basic-no-arg.c  nopts.c  opt-handling.c  optarg.c  stack-simple.c
test/ctme/: Makefile.am  ctme.h  test-fail.c
